fix alignment

--- a/css/index.css
+++ b/css/index.css
@@ -332,7 +332,7 @@ li {
 
     .spotlightHeader {
         margin-top: 30px; 
-        margin-left: 2.5%; 
+        margin-left: 5%; 
     }
 
     .spotlight-canvas {
